# automated-self-correction-loop

./: .env.example  .gitignore  CONTRIBUTING.md  NOTICE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
docs/demo/: heal-fibonacci.cast  heal-fibonacci.md
examples/demo/fibonacci-heal/: README.md  command.sh  final_solution.py  metrics.json  report.json
examples/demo/fibonacci-heal/iteration_01/: code.py  result.json
examples/demo/fibonacci-heal/iteration_02/: result.json
examples/fibonacci/: PROMPT.txt  solution_broken.py  test_fib.py
examples/hello_exit/: PROMPT.txt
scripts/: regenerate_demo.sh
src/ascl/: __init__.py  __main__.py  agent.py  ast_diff.py  cli.py  history_manager.py  loop.py  metrics.py  models.py  parser.py  prompts.py  runner.py  taxonomy.py  verifiers.py
tests/fixtures/mock_tasks/: README.md
tests/integration/: test_loop.py  test_oscillation.py
tests/unit/: test_ast_diff.py  test_history_manager.py  test_metrics.py  test_parser.py  test_pipeline_and_oscillation.py  test_runner.py  test_taxonomy.py  test_verifiers.py
