[tool.poetry]
name = "automated-self-correction-loop"
version = "0.2.0"
description = "Production-grade Python self-healing execution harness with dual run/heal modes"
authors = ["Divyansh Gupta"]
license = "AGPL-3.0-or-later"
readme = "README.md"
packages = [{ include = "ascl", from = "src" }]
keywords = ["llm", "self-healing", "agent", "pytest", "harness"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Testing",
]

[tool.poetry.dependencies]
python = "^3.11"
typer = ">=0.12.0"
anthropic = ">=0.40.0"
openai = ">=1.50.0"
rich = ">=13.0.0"
pytest = ">=8.0.0"

[tool.poetry.group.dev.dependencies]
ruff = ">=0.6.0"
mypy = ">=1.11.0"
pytest-cov = ">=5.0.0"

[tool.poetry.scripts]
ascl = "ascl.cli:run"

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
ignore = [
  "B008",  # Typer requires Option()/Argument() in function defaults
]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
mypy_path = "src"
packages = ["ascl"]

[[tool.mypy.overrides]]
module = ["anthropic.*", "openai.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"
filterwarnings = ["ignore::DeprecationWarning"]
